--- a/views/duty-handover-view.ejs
+++ b/views/duty-handover-view.ejs
@@ -217,7 +217,7 @@
                     <span class="fas fa-ellipsis-h fs--2"></span>
                   </button>
                   <div class="dropdown-menu dropdown-menu-end py-2">
-                    <a class="dropdown-item" href="#!">View</a>
+                    <a class="dropdown-item" href="/duty-handover/details?id=<%= item.reportId %>">View</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item text-danger" href="#!">Remove</a>
                   </div>
