Duty handover updated

--- a/views/case-report-view.ejs
+++ b/views/case-report-view.ejs
@@ -206,7 +206,7 @@
                     <span class="fas fa-ellipsis-h fs--2"></span>
                   </button>
                   <div class="dropdown-menu dropdown-menu-end py-2">
-                    <a class="dropdown-item" href="/case-report/details?id=<%= reportId %>">View</a>
+                    <a class="dropdown-item" href="/case-report/details?id=<%= item.reportId %>">View</a>
                     <!-- <div class="dropdown-divider"></div>
                     <a class="dropdown-item text-danger" href="#!">Remove</a> -->
                   </div>
