--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,33 +11,18 @@
 </nav>
 
 <!-- Navbar top -->
-<nav
-  class="navbar navbar-top fixed-top navbar-expand-lg"
-  id="navbarTop"
-  style="display: none"
->
+<nav class="navbar navbar-top fixed-top navbar-expand-lg" id="navbarTop" style="display: none">
   <!-- Left-side -->
   <div class="navbar-logo d-print-inline-flex">
-    <button
-      class="btn navbar-toggler navbar-toggler-humburger-icon hover-bg-transparent"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarTopCollapse"
-      aria-controls="navbarTopCollapse"
-      aria-expanded="false"
-      aria-label="Toggle Navigation"
-    >
+    <button class="btn navbar-toggler navbar-toggler-humburger-icon hover-bg-transparent" type="button"
+      data-bs-toggle="collapse" data-bs-target="#navbarTopCollapse" aria-controls="navbarTopCollapse"
+      aria-expanded="false" aria-label="Toggle Navigation">
       <span class="navbar-toggle-icon"><span class="toggle-line"></span></span>
     </button>
     <a class="navbar-brand me-1 me-sm-3" href="/">
       <div class="d-flex align-items-center">
         <div class="d-flex align-items-center">
-          <img
-            class="d-lg-none"
-            src="../assets/img/icons/logo.png"
-            alt="logo"
-            width="38"
-          />
+          <img class="d-lg-none" src="../assets/img/icons/logo.png" alt="logo" width="38" />
           <p class="logo-text ms-2 d-none d-sm-block fs-2 d-sm-none d-lg-block">
             Auxiliary Police
           </p>
@@ -47,51 +32,50 @@
   </div>
 
   <!-- Middle-side -->
-  <div
-    class="collapse navbar-collapse navbar-top-collapse order-1 order-lg-0 justify-content-center d-print-none"
-    id="navbarTopCollapse"
-  >
-    <ul
-      class="navbar-nav navbar-nav-top"
-      data-dropdown-on-hover="data-dropdown-on-hover"
-    >
+  <div class="collapse navbar-collapse navbar-top-collapse order-1 order-lg-0 justify-content-center d-print-none"
+    id="navbarTopCollapse">
+    <ul class="navbar-nav navbar-nav-top" data-dropdown-on-hover="data-dropdown-on-hover">
       <!-- Home -->
       <li class="nav-item dropdown">
-        <a class="nav-link lh-1" href="/" role="button"
-          ><span class="uil fs-0 me-2 uil-home"></span>Home</a
-        >
+        <a class="nav-link lh-1" href="/" role="button"><span class="uil fs-0 me-2 uil-home"></span>Home</a>
       </li>
 
       <!-- Duty Handover -->
       <li class="nav-item dropdown">
-        <a class="nav-link lh-1" href="/duty-handover/view" role="button"
-          ><span class="uil fs-0 me-2 uil-file-export"></span>Duty Handover</a
-        >
+        <a class="nav-link lh-1" href="/duty-handover/view" role="button"><span
+            class="uil fs-0 me-2 uil-file-export"></span>Duty Handover</a>
       </li>
 
       <!-- Reports -->
-      <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle lh-1"
-          href="#!"
-          role="button"
-          data-bs-toggle="dropdown"
-          data-bs-auto-close="outside"
-          aria-haspopup="true"
-          aria-expanded="false"
-          ><span class="uil fs-0 me-2 uil-cube"></span>Reports</a
-        >
-        <!--Social dropdown hover  -->
+      <li class="nav-item dropdown"><a class="nav-link dropdown-toggle lh-1" href="#!" role="button"
+          data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-haspopup="true" aria-expanded="false"><span
+            class="uil fs-0 me-2 uil-files-landscapes-alt"></span>Reports</a>
+
         <ul class="dropdown-menu navbar-dropdown-caret">
-          <li>
-            <a class="dropdown-item" href="/patrol-report/view">
-              <div class="dropdown-item-wrapper">
-                <span class="me-2 uil" data-feather="book"></span>Patrol Report
+          <li class="dropdown"><a class="dropdown-item dropdown-toggle" id="patrolReports" href="#"
+              data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+              <div class="dropdown-item-wrapper"><span
+                  class="uil fs-0 uil-angle-right lh-1 dropdown-indicator-icon"></span>Patrol Report
+                <span class="me-2 uil" data-feather="book"></span>
               </div>
             </a>
+            <ul class="dropdown-menu">
+              <li class="dropdown"><a class="dropdown-item" href="/shift-member/view">
+                  <div class="dropdown-item-wrapper">
+                    <span class="me-2 uil"></span>Shift Member
+                  </div>
+                </a>
+              </li>
+              <li class="dropdown"><a class="dropdown-item" href="/unit-patrol/view">
+                  <div class="dropdown-item-wrapper">
+                    <span class="me-2 uil"></span>Unit Patrol
+                  </div>
+                </a>
+              </li>
+            </ul>
           </li>
-          <li>
-            <a class="dropdown-item" href="/case-report/view">
+
+          <li class="dropdown"><a class="dropdown-item" href="/case-report/view">
               <div class="dropdown-item-wrapper">
                 <span class="me-2 uil" data-feather="flag"></span>Case Report
               </div>
@@ -102,24 +86,15 @@
 
       <!-- Schedule -->
       <li class="nav-item dropdown">
-        <a class="nav-link lh-1" href="/schedule" role="button"
-          ><span class="uil fs-0 me-2 uil-files-landscapes-alt"></span
-          >Schedule</a
-        >
+        <a class="nav-link lh-1" href="/schedule" role="button"><span
+            class="uil fs-0 me-2 uil-files-landscapes-alt"></span>Schedule</a>
       </li>
 
       <!-- Social -->
       <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle lh-1"
-          href="#!"
-          role="button"
-          data-bs-toggle="dropdown"
-          data-bs-auto-close="outside"
-          aria-haspopup="true"
-          aria-expanded="false"
-          ><span class="uil fs-0 me-2 uil-share-alt"></span>Social</a
-        >
+        <a class="nav-link dropdown-toggle lh-1" href="#!" role="button" data-bs-toggle="dropdown"
+          data-bs-auto-close="outside" aria-haspopup="true" aria-expanded="false"><span
+            class="uil fs-0 me-2 uil-share-alt"></span>Social</a>
         <!--Social dropdown hover  -->
         <ul class="dropdown-menu navbar-dropdown-caret">
           <li>
@@ -146,70 +121,38 @@
     <!-- Theme toggle -->
     <li class="nav-item">
       <div class="theme-control-toggle fa-icon-wait px-2">
-        <input
-          class="form-check-input ms-0 theme-control-toggle-input"
-          type="checkbox"
-          data-theme-control="phoenixTheme"
-          value="dark"
-          id="themeControlToggle"
-        />
-        <label
-          class="mb-0 theme-control-toggle-label theme-control-toggle-light"
-          for="themeControlToggle"
-          data-bs-toggle="tooltip"
-          data-bs-placement="left"
-          title="Switch theme"
-          ><span class="icon" data-feather="moon"></span
-        ></label>
-        <label
-          class="mb-0 theme-control-toggle-label theme-control-toggle-dark"
-          for="themeControlToggle"
-          data-bs-toggle="tooltip"
-          data-bs-placement="left"
-          title="Switch theme"
-          ><span class="icon" data-feather="sun"></span
-        ></label>
+        <input class="form-check-input ms-0 theme-control-toggle-input" type="checkbox"
+          data-theme-control="phoenixTheme" value="dark" id="themeControlToggle" />
+        <label class="mb-0 theme-control-toggle-label theme-control-toggle-light" for="themeControlToggle"
+          data-bs-toggle="tooltip" data-bs-placement="left" title="Switch theme"><span class="icon"
+            data-feather="moon"></span></label>
+        <label class="mb-0 theme-control-toggle-label theme-control-toggle-dark" for="themeControlToggle"
+          data-bs-toggle="tooltip" data-bs-placement="left" title="Switch theme"><span class="icon"
+            data-feather="sun"></span></label>
       </div>
     </li>
 
     <!-- User -->
     <li class="nav-item dropdown">
-      <a
-        class="nav-link lh-1 pe-0"
-        id="navbarDropdownUser"
-        href="#!"
-        role="button"
-        data-bs-toggle="dropdown"
-        data-bs-auto-close="outside"
-        aria-haspopup="true"
-        aria-expanded="false"
-      >
-        <% if(currentProfile === ''){ currentProfile =
-        '/assets/img/team/avatar.webp'; } %>
-        <div class="avatar avatar-l">
-          <img
-            class="rounded-circle bg-white border border-primary"
-            src="<%= currentProfile %>"
-          />
-        </div>
+      <a class="nav-link lh-1 pe-0" id="navbarDropdownUser" href="#!" role="button" data-bs-toggle="dropdown"
+        data-bs-auto-close="outside" aria-haspopup="true" aria-expanded="false">
+        <% if(currentProfile==='' ){ currentProfile='/assets/img/team/avatar.webp' ; } %>
+          <div class="avatar avatar-l">
+            <img class="rounded-circle bg-white border border-primary" src="<%= currentProfile %>" />
+          </div>
       </a>
-      <div
-        class="dropdown-menu dropdown-menu-end navbar-dropdown-caret py-0 dropdown-profile shadow border border-300"
-        aria-labelledby="navbarDropdownUser"
-      >
+      <div class="dropdown-menu dropdown-menu-end navbar-dropdown-caret py-0 dropdown-profile shadow border border-300"
+        aria-labelledby="navbarDropdownUser">
         <div class="card position-relative border-0">
           <div class="card-body p-0">
             <div class="text-center pt-4 pb-3">
               <div class="avatar avatar-xl">
-                <img
-                  class="rounded-circle shadow-sm"
-                  src="<%= currentProfile %>"
-                />
+                <img class="rounded-circle shadow-sm" src="<%= currentProfile %>" />
               </div>
-              <h5 class="mt-2 text-black"><%= currentFullName %></h5>
-              <h6
-                class="badge badge-phoenix mt-2 text-black badge-phoenix-primary"
-              >
+              <h5 class="mt-2 text-black">
+                <%= currentFullName %>
+              </h5>
+              <h6 class="badge badge-phoenix mt-2 text-black badge-phoenix-primary">
                 PB<%= currentUser %>
               </h6>
             </div>
@@ -220,14 +163,11 @@
             <ul class="nav d-flex flex-column mb-2 pb-1">
               <li class="nav-item">
                 <a class="nav-link px-3" href="/social/profile">
-                  <span class="me-2 text-900" data-feather="user"></span
-                  ><span>Profile</span></a
-                >
+                  <span class="me-2 text-900" data-feather="user"></span><span>Profile</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link px-3" href="/social/settings">
-                  <span class="me-2 text-900" data-feather="settings"></span
-                  >Settings
+                  <span class="me-2 text-900" data-feather="settings"></span>Settings
                 </a>
               </li>
             </ul>
@@ -236,19 +176,12 @@
           <!-- Footer user -->
           <div class="card-footer p-0">
             <div class="px-3 mt-3">
-              <a
-                class="btn btn-phoenix-secondary d-flex flex-center w-100"
-                href="/sign-out"
-              >
-                <span class="me-2" data-feather="log-out"> </span>Sign out</a
-              >
+              <a class="btn btn-phoenix-secondary d-flex flex-center w-100" href="/sign-out">
+                <span class="me-2" data-feather="log-out"> </span>Sign out</a>
             </div>
             <div class="my-2 text-center fw-bold fs--2 text-600">
-              <a class="text-600 me-1" href="#!">Privacy policy</a>&bull;<a
-                class="text-600 mx-1"
-                href="#!"
-                >Terms</a
-              >&bull;<a class="text-600 ms-1" href="#!">Cookies</a>
+              <a class="text-600 me-1" href="#!">Privacy policy</a>&bull;<a class="text-600 mx-1"
+                href="#!">Terms</a>&bull;<a class="text-600 ms-1" href="#!">Cookies</a>
             </div>
           </div>
         </div>
